# bakeoffcpp

./: CMakeLists.txt  conanfile.py  conanfile.txt
include/: bakeoffcpp.h
src/: CMakeLists.txt  bakeoffcpp.cpp  bakeoffcpp.h  main.cpp
test_package/: conanfile.py
